# cmaketemplate

./: .gitignore  CommonBuildParameters.cmake  CommonBuildParameters.cmake.example  CommonCompilerOptions.cmake  CompilationFlags.cmake  README.md  apple.toolchain.cmake
Android/: CMakeLists.txt
Linux/: CMakeLists.txt
OSX/: CMakeLists.txt
Windows/: CMakeLists.txt
cmake/: functions.cmake  install.cmake
cmake/compile_option_by_platform/: Windows.cmake
iOS/: CMakeLists.txt
